--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-preset-es2015": "^6.24.1",
+    "dotenv": "^4.0.0"
   },
   "scripts": {
     "start": "babel-node src/server.js --presets es2015",
     "build": "babel src -d lib"
-  },
+  }
 }
